--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="notec1"> #00796B</color>
+    <color name="notec2">#E53935</color>
+    <color name="notec3">#303F9F</color>
+    <color name="notec4">#4CAF50</color>
+    <color name="notec5">#FFC107</color>
 </resources>
